# chicken-weight-estimation

./: .gitignore  LICENSE  README.md  pyproject.toml
chicken_monitoring/assets/datasets/: area_weight.csv
chicken_monitoring/webcam_inference/: main.py
src/chicken_monitoring/assets/datasets/: area_weight.csv
src/chicken_monitoring/training_model/: train_yolov8.ipynb
src/chicken_monitoring/webcam_inference/: main.py
