[tool.poetry]
name = "chicken-monitoring"
version = "0.1.0"
description = ""
authors = ["chingkhei-th <chingkhei.thoudam@outlook.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.3.0+cu121", source = "torch"}
torchaudio = {version = "^2.3.0+cu121", source = "torch"}
torchvision = {version = "^0.18.0+cu121", source = "torch"}
ultralytics = "8.0.196"
roboflow = "^1.1.29"
scikit-learn = "^1.5.0"
opencv-python = "<4.8.0.76"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
